2004-08-04 Mikhail Khodjaiants
	Fix for bug 69085: Arrays in the Expressions view 
	* CArrayPartitionValue.java

2004-06-29 Alain Magloire

	Do not use the cache stackframe.
	* src/org/eclipse/cdt/debug/internal/core/model/CThread.java

2004-06-29 Mikhail Khodjaiants
	Temporary fix for bug 68915: Invalid values in the Variables view.
	* CStackFrame.java
	* CThread.java

2004-06-28 Mikhail Khodjaiants
	Partial fix for bug 45535: Performance problems when debugging.
	Cache the double and float presentations of the floating point types.
	* CDebugUtils.java
	* CFloatingPointValue.java: new
	* CValueFactory.java

2004-06-24 Mikhail Khodjaiants
	Temporary fix for bug 56520: Debug Perspective doesn't get called when a breakpoint is hit.
	* CThread.java
	
2004-06-23 Mikhail Khodjaiants
	Fix for bug 68316: Exception shutting down Eclipse with an active debug session.
	* CStackFrame.java
	* CThread.java

2004-06-22 Mikhail Khodjaiants
	Replaced global resource bundles by messages.

2004-06-16 Mikhail Khodjaiants
	Added support for the "Skip Breakpoints" and "Skip breakpoints during a "Run To Line" operation.
	* IRunToAddress.java
	* IRunToLine.java
	* CBreakpointManager.java
	* CDebugTarget.java

2004-06-12 Mikhail Khodjaiants
	"CUpdateManager" extends "Observable" to support "Auto-Refresh" toggle actions.
	* CRegisterManager.java
	* CSharedLibraryManager.java
	* CSignalManager.java
	* CUpdateManager.jave

2004-06-12 Mikhail Khodjaiants
	Changed the comments and copyright text.
	* ICUpdateManager.java

2004-06-11 Mikhail Khodjaiants
	"CDebugTarget" should provide an adapter for "ICDebugTarget".
	* CDebugTarget.java

2004-06-09 Mikhail Khodjaiants
	Changed the synchronization scope.
	* CSharedLibraryManager.java

2004-06-02 Mikhail Khodjaiants
	Fix for bug 65112: Debug Registers view is empty.
	* CRegisterManager.java
	* CDebugTarget.java
	* CRegister.java
	* CRegisterGroup.java
	* CVariable.java

2004-05-28 Mikhail Khodjaiants
	Support for the "Skip All Breakpoints" action.